# ExistOS-For-HP39GII

./: .clang-format  .gitignore  .gitmodules  99-hp39gii.rules  CMakeLists.txt  Makefile  Makefile.Linux  ProcessesMan.c  ProcessesMan.h  README.md  README_en.md  base_shell.c  base_shell.h  boot.c  builder.sh  console.bat  debug.h  default.nix  display.c  eabi_swi_system_call.h  exception.c  existos_swi_system_call.h  filesystem_test.c  firmware.sb  irq.c  ld.script  llapi_code.h  main.c  main.cpp  matrix.c  memory.c  memory_map.h  mmu.c  pageman.c  pageman.h  sbtool  shell.nix  start.c  startup_info.h  stub.c  (+13 more)
Config/: ffconf.h  (+6 more)
Libs/src/SymbolicC++3-3.35/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
Libs/src/giac-1.2.0/: AUTHORS  ChangeLog  INSTALACION  INSTALL  Init.scm  LEAME.WIN  LEAME.ipaq  Makefile.am  Makefile.in  NEWS  README  README.MACOSX  README.mingw  README.visualcpp  TODO  TROUBLES  acinclude.m4  aclocal.m4  addu.cc  archive.mingw  build_for_iphoneos  changeversion  compile.android  compte  config.h.64  config.h.in  config.h.iphone  config.h.mingw  config.h.win  configure  configure.in  configure.mingw  fltk.1.1.changes  giac.specs  giac.specs32  inst  java.README  mkdebian  mkdebian2  mkinstalldirs  (+17 more)
OSLoader/: CMakeLists.txt  CmakeLists.txt  OSloaderMenu.c  boot.c  boot.c.bak  debug.c  debug.h  msc_disk.c  services.c  services.c.bak  start.c  stmp37xxNandConf.c  stub.c  utilities.c  vectors.c
OSLoader/Component3rd/: CMakeLists.txt  dhara.7z  tinyusb0.7.0.7z
OSLoader/Component3rd/FatFs/: diskio.c
OSLoader/Component3rd/dhara/: CMakeLists.txt  error.c  map.c
OSLoader/Component3rd/tinyusb/: tusb_option.h
OSLoader/Config/: FreeRTOSConfig.h  SystemConfig.h  ffconf.h  tusb_config.h
OSLoader/CrashLog/: CrashLog.c  CrashLog.h  CrashSender.c  CrashSender.h  crash_test_main.c  test_crash.c  test_crash.h
OSLoader/Fonts/: font_ascii.h
OSLoader/HAL/: CMakeLists.txt  FTL_up.c  FTL_up.h  board_up.c  board_up.h  clkctrl_up.c  clkctrl_up.h  display_up.c  display_up.h  interrupt_up.c  interrupt_up.h  keyboard_up.c  keyboard_up.h  mtd_up.c  mtd_up.h  rtc_up.c  rtc_up.h  timer_up.c  timer_up.h  uart_up.c  uart_up.h  usb_descriptors.c
OSLoader/HAL/Hardware/: stmp_audioout.c  stmp_board.c  stmp_clkctrl.c  stmp_gpmi.c  stmp_irqController.c  stmp_lcdif.c  stmp_power.c  stmp_rtc.c  stmp_timer.c  stmp_usbdcd.c
OSLoader/Include/: OSloaderMenu.h  stmp37xxNandConf.h  stmp_NandControlBlock.h
OSLoader/LowLevelAPI/: CMakeLists.txt  llapi.c  llapi.h  llapi_code.h
OSLoader/Scheduler/: CMakeLists.txt  tasks.c
OSLoader/Scheduler/include/: FreeRTOS.h  deprecated_definitions.h  mpu_prototypes.h  portmacro.h  task.h
OSLoader/Scheduler/porting/: port.c  portISR.c
OSLoader/VmMgr/: CMakeLists.txt  cdmp.c  cdmp.h  mapList.c  mapList.h  mem_malloc.c  mem_malloc.h  minilzo.c  mmu.c  mmu.h  quicklz.c  quicklz.h  vmMgr.c  vmMgr.h
OSLoader/VmMgr/tlsf/: tlsf.c
OSLoader/boot/core/: boot_manager.c  boot_manager.h
OSLoader/boot/services/: display_service.c  ftl_service.c  key_service.c  llapi_service.c  mtd_service.c  services.h  usb_service.c  vm_service.c
OSLoader/drivers/: stmp_board.c  stmp_gpmi.c  stmp_lradc.c  stmp_rtc.c  stmp_uartdbg.c
OSLoader/drivers/input/: keyboard_up.c
OSLoader/drivers/timer/: stmp_timer.c
System/: CMakeLists.txt  CrashLog.c  GuiLite.h  SysIRQ.c  SystemConfig.c  SystemFs.c  SystemFs.h  SystemUI.c  SystemUI.h  UICore.cpp  UICore.h  UI_Chinese.h  UI_Config.h  UI_English.h  UI_Language.h  UI_build_stamp.h  VROMLoader.c  VROMLoader.h  basic_api.h  bin_loader.c  console.c  console.h  debug.h  dll_table.c  dll_table.h  elf_loader.c  exp_loader.c  ginac-examples.info  init.c  jpgViewer.c  kcasporing_gl.c  kcasporing_gl.h  keyboard.c  keyboard.h  keyboard_gii39.h  khicas_stub.cpp  main.c  memtest.c  mjpegPlayer.c  mpy_port.c  (+12 more)
System/Applications/System/: clockman.c
System/Config/: FreeRTOSConfig.h  SysConf.h  lv_conf.h
System/Core/: SystemConfig.c  SystemConfig.h  VROMLoader.c  VROMLoader.h  init.c  list.c  main.c  memMang.c  tasks.c  timers.c.dis
System/Core/include/: croutine.h  mpu_wrappers.h
System/Core/porting/: port.c  portISR.c  portmacro.h
System/Drivers/: SystemFs.c
System/Fs/Fatfs/: diskio.c  ff.c  ffconf.h  ffsystem.c
System/Fs/littlefs/: lfs_util.h
System/KLib/: CMakeLists.txt  lv_conf.h
System/KLib/libelf/: CMakeLists.txt  elf64.c
System/KLib/mpy/: mpconfigport.h
System/KLib/tjpgdec/: CMakeLists.txt  tjpgd.c  tjpgdcnf.h
System/SysAPP/: clockman.c
System/Utils/: basic_api.c  debug.h  sym_def.c  test.cpp
System/core/: SystemConfig.c  SystemConfig.h  VROMLoader.h  getentropy.c
System/coremarkTest/: core_main.c  core_portme.c  core_portme.h  coremark.h
System/crush/: CrashLog.c  CrashLog.h
System/disable/: SystemFs.c  SystemUI.c  SystemUI.h  jpgViewer.c  mjpegPlayer.c  mpy_port.h_off  wavPlayer.c
System/drivers/: keyboard.h
System/emu48/: CMakeLists.txt  COLOR.H  MacTypePatch.h  MacWinAPIPatch.h  emu48_display.c  emu48_file.c  emu48_kb_39g.h  emu48_keyboard.c  emu48_keyboard.h  emu48_porting.c  emu48_serial.c  emu48_timer.c  emu48ico.c  pch.h  resource.h
System/filesystem/: warpper.c
System/gb/: CMakeLists.txt  cpu.c  cpu.h  gbico.c  interrupt.c  interrupt.h  lcd.c  lcd.h  main.c  mem.c  mem.h  rom.c  rom.h  sdl.c  sdl.h  timer.c
System/graphics/: ExistOSlogo.h  SystemUI.c  UICore.cpp  vgafont.c
System/tmp/: djpg.c  tjpgdcnf.h
System/utils/: basic_api.c  debug.h  newlib_stub.c  sys_llapi.c
TestELF/: CMakeLists.txt  Makefile  crt0.c  ld.script  readme  test.c  txt.h
TestELF/APLET_bf/: syscall.c  test.c
TestELF/APLET_memtest/: test.c
TestELF/CoreMark/: core_portme.c  core_portme.h  coremark.h  swi_system_call.h  syscall.c
TestELF/TI_emu/: hardware.c  hardware.h  swi_system_call.h  syscall.c  test.c  ti8xemu.c  ti8xemu.h  z80.c  z80.h  z80cdx86.h  z80debug.c  z80io.h
TestELF/TestC/: test.c
TestELF/TestCPP/: ldscript.ld  main.cpp  syscall.cpp
TestELF/TestFile/: test.c
tools/sys_signer/: CMakeLists.txt  builder.sh  default.nix  main.c
(+1306 files in other folders)
