include_directories(.)


include_directories(./lvgl-8.2.0						                  )
include_directories(./lvgl-8.2.0/src/core						        )
include_directories(./lvgl-8.2.0/src/draw	                     )
include_directories(./lvgl-8.2.0/src/draw/nxp_pxp               )
include_directories(./lvgl-8.2.0/src/draw/nxp_vglite            )
include_directories(./lvgl-8.2.0/src/draw/sdl                   )
include_directories(./lvgl-8.2.0/src/draw/stm32_dma2d           )
include_directories(./lvgl-8.2.0/src/draw/sw                    )
include_directories(./lvgl-8.2.0/src/extra                      )
include_directories(./lvgl-8.2.0/src/extra/layouts              )
include_directories(./lvgl-8.2.0/src/extra/layouts/flex         )
include_directories(./lvgl-8.2.0/src/extra/layouts/grid         )
include_directories(./lvgl-8.2.0/src/extra/libs                 )
include_directories(./lvgl-8.2.0/src/extra/libs/bmp             )
include_directories(./lvgl-8.2.0/src/extra/libs/ffmpeg          )
include_directories(./lvgl-8.2.0/src/extra/libs/freetype        )
include_directories(./lvgl-8.2.0/src/extra/libs/fsdrv           )
include_directories(./lvgl-8.2.0/src/extra/libs/gif             )
include_directories(./lvgl-8.2.0/src/extra/libs/png             )
include_directories(./lvgl-8.2.0/src/extra/libs/qrcode          )
include_directories(./lvgl-8.2.0/src/extra/libs/rlottie         )
include_directories(./lvgl-8.2.0/src/extra/libs/sjpg            )
include_directories(./lvgl-8.2.0/src/extra/others               )
include_directories(./lvgl-8.2.0/src/extra/others/gridnav       )
include_directories(./lvgl-8.2.0/src/extra/others/monkey        )
include_directories(./lvgl-8.2.0/src/extra/others/snapshot      )
include_directories(./lvgl-8.2.0/src/extra/themes               )
include_directories(./lvgl-8.2.0/src/extra/themes/basic         )
include_directories(./lvgl-8.2.0/src/extra/themes/default       )
include_directories(./lvgl-8.2.0/src/extra/themes/mono          )
include_directories(./lvgl-8.2.0/src/extra/widgets              )
include_directories(./lvgl-8.2.0/src/extra/widgets/animimg      )
include_directories(./lvgl-8.2.0/src/extra/widgets/calendar     )
include_directories(./lvgl-8.2.0/src/extra/widgets/chart        )
include_directories(./lvgl-8.2.0/src/extra/widgets/colorwheel   )
include_directories(./lvgl-8.2.0/src/extra/widgets/imgbtn       )
include_directories(./lvgl-8.2.0/src/extra/widgets/keyboard     )
include_directories(./lvgl-8.2.0/src/extra/widgets/led          )
include_directories(./lvgl-8.2.0/src/extra/widgets/list         )
include_directories(./lvgl-8.2.0/src/extra/widgets/menu         )
include_directories(./lvgl-8.2.0/src/extra/widgets/meter        )
include_directories(./lvgl-8.2.0/src/extra/widgets/msgbox       )
include_directories(./lvgl-8.2.0/src/extra/widgets/span         )
include_directories(./lvgl-8.2.0/src/extra/widgets/spinbox      )
include_directories(./lvgl-8.2.0/src/extra/widgets/spinner      )
include_directories(./lvgl-8.2.0/src/extra/widgets/tabview      )
include_directories(./lvgl-8.2.0/src/extra/widgets/tileview     )
include_directories(./lvgl-8.2.0/src/extra/widgets/win          )
include_directories(./lvgl-8.2.0/src/font                       )
include_directories(./lvgl-8.2.0/src/gpu                        )
include_directories(./lvgl-8.2.0/src/hal                        )
include_directories(./lvgl-8.2.0/src/misc                       )
include_directories(./lvgl-8.2.0/src/widgets                    )


include_directories(./lvgl-8.2.0/demos/widgets)
include_directories(./lvgl-8.2.0/demos/widgets/assets)

include_directories(./lvgl-8.2.0/demos/keypad_encoder)

include_directories(./lvgl-8.2.0/demos/music)
include_directories(./lvgl-8.2.0/demos/music/assets)


AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/core								LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw	                            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw/nxp_pxp                     LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw/nxp_vglite                  LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw/sdl                         LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw/stm32_dma2d                 LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/draw/sw                          LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra                            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/layouts                    LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/layouts/flex               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/layouts/grid               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs                       LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/bmp                   LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/ffmpeg                LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/freetype              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/fsdrv                 LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/gif                   LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/png                   LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/qrcode                LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/rlottie               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/libs/sjpg                  LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/others                     LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/others/gridnav             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/others/monkey              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/others/snapshot            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/themes                     LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/themes/basic               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/themes/default             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/themes/mono                LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets                    LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/animimg            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/calendar           LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/chart              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/colorwheel         LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/imgbtn             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/keyboard           LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/led                LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/list               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/menu               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/meter              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/msgbox             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/span               LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/spinbox            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/spinner            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/tabview            LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/tileview           LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/extra/widgets/win                LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/font                             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/gpu                              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/hal                              LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/misc                             LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/src/widgets                          LVGL_SRCS)
 
include_directories(./lvgl-8.2.0/demos/benchmark)
include_directories(./lvgl-8.2.0/demos/benchmark/assets)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/benchmark                      LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/benchmark/assets               LVGL_SRCS)

include_directories(./lvgl-8.2.0/demos/stress)
include_directories(./lvgl-8.2.0/demos/stress/assets)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/stress                      LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/stress/assets               LVGL_SRCS)



AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/music                      LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/music/assets               LVGL_SRCS)

AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/widgets                      LVGL_SRCS)
AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/widgets/assets               LVGL_SRCS)

AUX_SOURCE_DIRECTORY(./lvgl-8.2.0/demos/keypad_encoder               LVGL_SRCS)


ADD_LIBRARY(lvgl ${LVGL_SRCS})
